edit user_cfa_get
