# server/openapi_server/views/user.py
@@ -1,7 +1,7 @@
-from openapi_server.models import RegisterUserDTO, LoginUserDTO, DepositValueDTO, WithdrawValueDTO, User, PublicUser, UserCfaDTO, CfaImage
+from openapi_server.models import RegisterUserDTO, LoginUserDTO, DepositValueDTO, WithdrawValueDTO, User, PublicUser, UserCfaDTO, CfaImage, OfferDTO
 from data import db_session
 import data.__all_models as db_models
-from sqlalchemy import or_
+from sqlalchemy import or_, and_
 from utils import generator
 from openapi_server.models import LoginResponse200
 from utils import entities
@@ -63,11 +63,9 @@ def login(login_user_dto: LoginUserDTO):
 def get_cfa_list(user_id: int):
     db_sess = db_session.create_session()
 
-    user = db_sess.query(db_models.user.User).get(user_id)
-    if not user:
-        raise FileNotFoundError("User not found")
+    user = entities.get_public_user(user_id)
 
-    user_cfas = db_sess.query(db_models.cfa.Cfa).filter(db_models.cfa.Cfa.user_id == user_id).all()
+    user_cfas = db_sess.query(db_models.cfa.Cfa).filter(and_(db_models.cfa.Cfa.user_id == user_id, db_models.cfa.Cfa.offer_id == 0)).all()
 
     user_cfa_count = {}
     for cfa in user_cfas:
@@ -81,6 +79,19 @@ def get_cfa_list(user_id: int):
         cfa_image = entities.get_cfa_image(cfa_image_id)
         result.append(UserCfaDTO(cfa_image, len(tokens), tokens))
 
+    return result
+
+def get_offer_list(user_id: int):
+    db_sess = db_session.create_session()
+
+    user = entities.get_public_user(user_id)
+
+    user_offers = db_sess.query(db_models.offer.Offer).filter(
+        and_(db_models.offer.Offer.user_id == user_id, db_models.offer.Offer.count > 0)).all()
+
+    result = []
+    for offer in user_offers:
+        result.append(OfferDTO(offer.id, ))
     return result
 
 
